--- a/.github/workflows/cd-pipeline.yaml
+++ b/.github/workflows/cd-pipeline.yaml
@@ -124,6 +124,6 @@ jobs:
       run: |
         helm upgrade --install \
           ${APP_NAME} github-actions \
-          --set image.tag=${TAG} \
+          --set image.tag=env.IMAGE_TAGS \
           --set fullnameOverride=${APP_NAME}-${TAG} \
           --namespace ${OPENSHIFT_NAMESPACE}
